@@ -9,35 +9,51 @@ _skip_lc_messages();
 
 ?>
 --INI--
-pgsql.log_notice=1
-pgsql.ignore_notice=0
 --FILE--
 <?php
 include 'config.inc';
 include 'lcmess.inc';
 
+ini_set('pgsql.log_notice', TRUE);
+ini_set('pgsql.ignore_notice', FALSE);
+
 $db = pg_connect($conn_str);
 
 _set_lc_messages();
 
-$res = pg_query($db, 'SET client_min_messages TO NOTICE;'); 
+$res = pg_query($db, 'SET client_min_messages TO NOTICE;');
 var_dump($res);
 
+// Get empty notice
+var_dump(pg_last_notice($db));
+var_dump(pg_last_notice($db, TRUE));
+
+pg_query($db, "BEGIN;");
+pg_query($db, "BEGIN;");
 pg_query($db, "BEGIN;");
 pg_query($db, "BEGIN;");
 
-$msg = pg_last_notice($db);
-if ($msg === FALSE) {
-	echo "Cannot find notice message in hash\n";
-	var_dump($msg);
-}
-echo $msg."\n";
-echo "pg_last_notice() is Ok\n";
-
+// Get notices
+var_dump(pg_last_notice($db));
+var_dump(pg_last_notice($db, TRUE));
 ?>
 --EXPECTF--
 resource(%d) of type (pgsql result)
+string(0) ""
+array(0) {
+}
 
 Notice: pg_query(): %s already a transaction in progress in %s on line %d
-%s already a transaction in progress
-pg_last_notice() is Ok
+
+Notice: pg_query(): %s already a transaction in progress in %s on line %d
+
+Notice: pg_query(): %s already a transaction in progress in %s on line %d
+string(52) "WARNING:  there is already a transaction in progress"
+array(3) {
+  [0]=>
+  string(52) "WARNING:  there is already a transaction in progress"
+  [1]=>
+  string(52) "WARNING:  there is already a transaction in progress"
+  [2]=>
+  string(52) "WARNING:  there is already a transaction in progress"
+}
