@@ -18,6 +18,9 @@ Hash:
 PDO_Firebird:
   . Fixed bug #60052 (Integer returned as a 64bit integer on X64_86). (Mariuz)
 
+Pgsql:
+  . Implemented FR #31021 (pg_result_notice() is needed to get all notice messages).
+
 Standard:
   . Fixed bug #71100 (long2ip() doesn't accept integers in strict mode).
     (Laruence)
